tag creation tag suggestion in the text input of the tag directive

--- a/server/resources/tags/config.json
+++ b/server/resources/tags/config.json
@@ -5,7 +5,7 @@
 			"name": "title",
 			"type": "string",
 			"typeLabel": "string",
-			"required": false,
+			"required": true,
 			"id": "title",
 			"order": 0
 		}
