tag display page seems to work fine

--- a/app/bower.json
+++ b/app/bower.json
@@ -12,6 +12,7 @@
         "angular-bootstrap": "*",
         "angular-ui-router": "*",
         "angular-ui-utils" : "*",
+        "angular-ui-tinymce": "*",
         "textAngular" : "*",
         "angular-ui-ace" : "#bower",
         "AngularJS-Toaster" : "*",
