googleDoc preview little bug fixed

--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
         "dpd-fileupload":"CyberCRI/dpd-fileupload",
         "jz-json":"0.0.1",
         "jz-recommend":"0.0.1",
-        "jz-tags":"0.0.1"
+        "jz-tags":"0.0.1",
+        "dpd-passport":"0.1.1"
     }
 }
