--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
-      "grunt-express": "~1.2.1",
-      "grunt-open": "~0.2.3",
+      "grunt": "~0.4.1",
       "grunt-usemin": "~2.0.0",
       "grunt-ngmin": "0.0.3",
       "grunt-contrib-clean": "~0.5.0",
@@ -12,25 +11,27 @@
       "grunt-contrib-uglify": "~0.2.7",
       "grunt-contrib-cssmin": "~0.7.0",
       "grunt-contrib-watch": "~0.5.3",
-      "grunt-contrib-livereload":"*",
       "grunt-bower-task": "~0.3.4",
       "grunt-contrib-copy": "~0.4.1",
       "grunt-contrib-jshint": "~0.7.2",
       "grunt-contrib-connect": "~0.5.0",
       "load-grunt-tasks": "~0.2.0",
-      "grunt-bower-install": "~0.8.0",
-      "grunt-browser-sync": "~0.4.8",
-      "grunt-karma": "~0.6.2",
+      "grunt-wiredep": "^1.7.0",
+      "grunt-newer": "~0.6.0",
+      "grunt-browser-sync": "0.9.1",
+      "grunt-available-tasks": "~0.4.2",
+      "grunt-rev": "0.1.0",
+      "grunt-contrib-csslint": "0.2.0",
+      "grunt-contrib-imagemin": "0.4.1",
       "karma-ng-html2js-preprocessor": "~0.1.0",
       "karma-chrome-launcher": "~0.1.0",
       "karma-firefox-launcher": "~0.1.0",
       "karma-jasmine": "~0.1.3",
       "karma-phantomjs-launcher": "~0.1.0",
-      "karma": "~0.10.4",
       "karma-coverage": "~0.1.4",
-      "grunt-contrib-csslint": "~0.2.0",
-      "grunt-contrib-imagemin": "~0.4.1",
-      "grunt-plato": "~0.2.1",
+      "karma-ng-scenario": "~0.1.0",
+      "karma": "~0.10.4",
+      "grunt-karma": "~0.6.2",
       "grunt-inline-angular-templates":"*"
   },
   "engines": {
