small clean of the server
recommandation in progress

--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,31 @@
 {
     "name": "IdeaStorm",
     "version": "0.0.1",
-    "private": true,
-
-    "dependencies": {
-        "deployd":"0.7.0",
-        "dpd-email":"0.0.3",
-        "dpd-event":"0.0.2",
-        "dpd-fileupload":"CyberCRI/dpd-fileupload"
-    }
+    "description": "a collaborative tool to propose share and develo projects of all kind",
+    "author": "Charles Jacquin <charles.jacquin@autistici.org>",
+    "contributors": [{
+        "name": "Charles Jacquin",
+        "email": "charles.jacquin@autistici.org"
+    }],
+    "main": "app.js",
+    "repository": {
+    "type": "git",
+    "url": "https://github.com/CyberCRI/IdeaStorm"
+},
+"bugs": {
+    "url": "https://github.com/CyberCRI/IdeaStorm"
+},
+"keywords": [
+    "collaborative",
+    "CRI",
+    "projects"
+],
+"dependencies": {
+    "deployd":"0.7.0",
+    "dpd-email":"0.0.3",
+    "dpd-event":"0.0.2",
+    "dpd-fileupload":"CyberCRI/dpd-fileupload"
+},
+    "preferGlobal": true,
+    "private": true
 }
