-socket.io connectivity problem fixed

--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,10 @@
     "deployd":"0.7.0",
     "dpd-email":"0.0.3",
     "dpd-event":"0.0.2",
-    "dpd-fileupload":"CyberCRI/dpd-fileupload"
+    "dpd-fileupload":"CyberCRI/dpd-fileupload",
+    "jz-json":"0.0.1",
+    "jz-recommend":"0.0.1",
+    "jz-tags":"0.0.1"
 },
     "preferGlobal": true,
     "private": true
