--- a/server/resources/email/config.json
+++ b/server/resources/email/config.json
@@ -4,7 +4,7 @@
 	"port": "465",
 	"ssl": true,
 	"username": "charles.jacquin@gmail.com",
-	"password": "gmail4tw",
+	"password": "aBrandNewPassword4tw",
 	"defaultTemplate": "",
 	"internalOnly": true,
 	"productionOnly": false,
