--- a/client/bower.json
+++ b/client/bower.json
@@ -5,9 +5,6 @@
     "dependencies": {
         "angular": "1.2.16",
         "angular-translate": "1.1.1",
-        "angular-google-maps":"*",
-        "AngularJS-Toaster" : "*",
-        "angular-socket-io" : "*",
         "angular-sanitize": "~1.2.16",
         "angular-bootstrap": "*",
         "angular-ui-router": "*",
@@ -17,7 +14,6 @@
         "angular-ui-ace" : "#bower",
         "angular-crop-image" : "https://github.com/Charl---/angular-image-crop.git",
         "ng-file-upload ": "*",
-        "ng-parallax" : "*",
         "underscore" : "*",
         "socket.io-client": "1.0.0-pre2",
         "pdfjs" : "*",
@@ -26,8 +22,7 @@
         "Font-Awesome": "4.1",
         "angular-carousel" : "0.2.3",
         "angular-material" : "https://github.com/angular/material.git",
-        "angular-timer" : "*",
-        "smooth-scroll" : "https://github.com/cferdinandi/smooth-scroll.git"
+        "angular-timer" : "*"
     },
     "devDependencies": {}
 }
