--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ server/public/
 server/node_modules
 client/dist
 client/node_modules
-client/app/vendors
+client/app/styles/main.css
+client/app/modules/common/config.js
+#client/app/vendors
+!client/app/vendors/satellizer/satellizer.js
 .idea
