--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.8.1",
     "mongoose": "~3.8.8",
     "mongoose-q": "0.0.10",
+    "mongoose-random" : "*",
     "morgan": "~1.1.0",
     "multer": "^0.1.4",
     "q": "1.0.1",
