--- a/client/bower.json
+++ b/client/bower.json
@@ -28,5 +28,8 @@
     "jspdf": "*",
     "ng-messages": "*"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "angular": "1.3.2"
+  }
 }
