--- a/client/bower.json
+++ b/client/bower.json
@@ -28,8 +28,5 @@
     "jspdf": "*",
     "ng-messages": "*"
   },
-  "devDependencies": {},
-  "resolutions": {
-    "angular": "1.3.2"
-  }
+  "devDependencies": {}
 }
