updated and improved carrosel

--- a/client/bower.json
+++ b/client/bower.json
@@ -19,14 +19,14 @@
     "animatecss": "https://github.com/daneden/animate.css.git",
     "Font-Awesome": "4.1",
     "font-awesome-animation": "*",
-    "angular-carousel": "0.2.3",
     "angular-material": "0.0.3",
     "angular-timer": "*",
     "satellizer": "0.3.1",
     "opentip": "2.4.6",
     "angular-timeago": "0.1.2",
     "jspdf": "*",
-    "ng-messages": "*"
+    "ng-messages": "*",
+    "angular-carousel": "~0.3.7"
   },
   "devDependencies": {}
 }
