--- a/client/bower.json
+++ b/client/bower.json
@@ -28,5 +28,8 @@
     "ng-messages": "*",
     "angular-carousel": "~0.3.7"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "angular": "1.3.3"
+  }
 }
