Fixes for deployment

--- a/client/app/env/prod.js.sample
+++ b/client/app/env/prod.js.sample
@@ -1,6 +1,6 @@
 PrivateConfig = {
     env: 'prod',
-    apiServer: 'http://ideastorm.io',
+    apiServer: 'http://IdeaWeave.io',
     githubClient: '',
     googleClient: ''
 };
