--- a/deployConfigExample.json
+++ b/deployConfigExample.json
@@ -1,8 +1,6 @@
 {
-    "host": "ideastorm.io",
-    "username": "foo",
-    "serverPath" : "",
-    "clientPath" : "",
-    "path": "",
-    "password": "bar"
+    "host": "ideaweave.io",
+    "username": "user",
+    "path": "/home/user/ideaweave",
+    "password": "supersecret"
 }
