--- a/client/bower.json
+++ b/client/bower.json
@@ -21,7 +21,7 @@
     "font-awesome-animation": "*",
     "angular-material": "0.0.3",
     "angular-timer": "*",
-    "satellizer": "0.3.1",
+    "satellizer": "~0.8.7",
     "opentip": "2.4.6",
     "angular-timeago": "0.1.2",
     "jspdf": "*",
