--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
+.idea
+.DS_Store
+
 deployConfig.json
 node_modules
+nginx.conf
+
 server/public/
 server/node_modules
 server/config/env/development.js
 server/config/env/production.js
+server/db
+
 client/dist
 client/node_modules
 client/app/env/config.js
@@ -11,5 +18,4 @@ client/app/styles/main.css
 client/app/modules/common/config.js
 client/app/vendors
 !client/app/vendors/satellizer/satellizer.js
-.idea
-.DS_Store
+
