Waiting on multiple streams for dist

--- a/client/package.json
+++ b/client/package.json
@@ -7,25 +7,26 @@
   "devDependencies": {
     "connect-livereload": "^0.4.0",
     "express": "^4.8.5",
+    "grunt-inline-angular-templates": "*",
     "gulp": "^3.8.7",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.3.4",
+    "gulp-copy": "*",
     "gulp-embedlr": "^0.5.2",
+    "gulp-grunt": "*",
+    "gulp-inline-angular-templates": "*",
     "gulp-jshint": "^1.8.4",
     "gulp-livereload": "^2.1.1",
-    "gulp-util": "^3.0.0",
-    "tiny-lr": "^0.1.0",
-    "gulp-sass": "0.7.3",
-    "gulp-ng-annotate": "*",
-    "gulp-usemin": "*",
     "gulp-minify-css": "*",
     "gulp-minify-html": "*",
-    "gulp-copy": "*",
-    "gulp-uglify": "*",
-    "gulp-inline-angular-templates": "*",
+    "gulp-ng-annotate": "*",
     "gulp-rev": "*",
-    "gulp-grunt": "*",
-    "grunt-inline-angular-templates": "*"
+    "gulp-sass": "0.7.3",
+    "gulp-uglify": "*",
+    "gulp-usemin": "*",
+    "gulp-util": "^3.0.0",
+    "merge-stream": "^0.1.7",
+    "tiny-lr": "^0.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
