--- a/client/bower.json
+++ b/client/bower.json
@@ -11,7 +11,7 @@
     "angular-ui-tinymce": "*",
     "angular-ui-select": "*",
     "angular-image-crop": "*",
-    "ng-file-upload ": "*",
+    "ng-file-upload": "~3.2.0",
     "angular-socket-io": "0.6.0",
     "underscore": "~1.7.0",
     "socket.io-client": "1.0.0-pre2",
@@ -24,7 +24,7 @@
     "satellizer": "~0.8.7",
     "opentip": "2.4.6",
     "angular-timeago": "0.1.2",
-    "jspdf": "*",
+    "jspdf": "1.0.x",
     "ng-messages": "*",
     "angular-carousel": "~0.3.7"
   },
