wiring up to client-side etherpad

--- a/client/app/env/dev.js.sample
+++ b/client/app/env/dev.js.sample
@@ -2,5 +2,6 @@ PrivateConfig = {
     env: 'dev',
     apiServer: 'http://localhost:5011',
     githubClient: '',
-    googleClient: ''
+    googleClient: '',
+    etherpadServer: 'http://localhost:9001'
 };
