--- a/nginx.sample.conf
+++ b/nginx.sample.conf
@@ -9,6 +9,17 @@ server {
                 try_files /index.html =404; 
         }
 
+        # Redirect etherpad calls, including websocket
+        location ^~ /etherpad/ {
+            # Strip off the subdirectory
+            rewrite ^/etherpad(.*)$ $1 break;
+
+            proxy_pass http://localhost:9001;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
         # Any assets should be loaded directly
         location ~* \.(html|js|css|png|jpg|ico|eot|svg|ttf|woff|otf)$ {
                 root [ROOT_DIRECTORY]/IdeaWeave/client/app;
