--- a/client/bower.json
+++ b/client/bower.json
@@ -26,7 +26,8 @@
     "angular-timeago": "0.1.2",
     "jspdf": "1.0.x",
     "ng-messages": "*",
-    "angular-carousel": "~0.3.7"
+    "angular-carousel": "~0.3.7",
+    "angular-cookies": "~1.3.15"
   },
   "devDependencies": {},
   "resolutions": {
