fix dependency version

--- a/client/bower.json
+++ b/client/bower.json
@@ -3,13 +3,13 @@
   "description": "social and collaborative tool",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.3.15",
+    "angular": "~1.3.17",
     "angular-translate": "1.1.1",
     "angular-sanitize": "~1.2.16",
-    "angular-ui-router": "*",
-    "angular-ui-utils": "*",
-    "angular-ui-tinymce": "*",
-    "angular-ui-select": "*",
+    "angular-ui-router": "~0.2.12",
+    "angular-ui-utils": "0.1.1",
+    "angular-ui-tinymce": "~0.0.9",
+    "angular-ui-select": "0.8.3",
     "angular-image-crop": "*",
     "ng-file-upload": "~3.2.0",
     "angular-socket-io": "0.6.0",
@@ -20,7 +20,7 @@
     "Font-Awesome": "4.1",
     "font-awesome-animation": "*",
     "angular-material": "0.0.3",
-    "angular-timer": "*",
+    "angular-timer": "1.1.7",
     "satellizer": "~0.8.7",
     "opentip": "2.4.6",
     "angular-timeago": "0.1.2",
