--- a/client/bower.json
+++ b/client/bower.json
@@ -3,31 +3,31 @@
   "description": "social and collaborative tool",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.3.17",
-    "angular-translate": "1.1.1",
-    "angular-sanitize": "~1.2.16",
+    "angular": "~1.4.3",
+    "angular-translate": "~2.7.2",
+    "angular-sanitize": "~1.4.4",
     "angular-ui-router": "~0.2.12",
-    "angular-ui-utils": "0.1.1",
+    "angular-ui-utils": "~2.0.0",
     "angular-ui-tinymce": "~0.0.9",
-    "angular-ui-select": "0.8.3",
+    "angular-ui-select": "~0.12.0",
     "angular-image-crop": "*",
-    "ng-file-upload": "~3.2.0",
-    "angular-socket-io": "0.6.0",
+    "ng-file-upload": "~5.0.9",
+    "angular-socket-io": "0.7.0",
     "underscore": "~1.7.0",
-    "socket.io-client": "1.0.0-pre2",
+    "socket.io-client": "~1.3.6",
     "pdfjs": "https://github.com/mozilla/pdf.js.git",
     "animatecss": "https://github.com/daneden/animate.css.git",
-    "Font-Awesome": "4.1",
+    "Font-Awesome": "~4.3",
     "font-awesome-animation": "*",
-    "angular-material": "0.0.3",
-    "angular-timer": "1.1.7",
-    "satellizer": "~0.8.7",
+    "angular-material": "~0.10.0",
+    "angular-timer": "~1.3.3",
+    "satellizer": "~0.11.2",
     "opentip": "2.4.6",
     "angular-timeago": "0.1.2",
     "jspdf": "1.0.x",
     "ng-messages": "*",
-    "angular-carousel": "~0.3.7",
-    "angular-cookies": "~1.3.15"
+    "angular-carousel": "~0.3.12",
+    "angular-cookies": "~1.3.17"
   },
   "devDependencies": {}
 }
