--- a/client/bower.json
+++ b/client/bower.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "~1.4.3",
+    "angular-animate": "~1.4.3",
     "angular-translate": "~2.7.2",
     "angular-sanitize": "~1.4.4",
     "angular-ui-router": "~0.2.12",
