WIP: Forgot password mail working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IdeaStorm-deploy",
+  "name": "IdeaWeave-deploy",
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
