--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "morgan": "~1.1.0",
     "multer": "^0.1.4",
     "nodemailer": "1.4.0",
+    "nodemailer-smtp-pool": "^1.1.1",
     "oauth-client": "~0.3.0",
     "q": "1.0.1",
     "request": "^2.40.0",
