--- a/client/bower.json
+++ b/client/bower.json
@@ -3,33 +3,34 @@
   "description": "social and collaborative tool",
   "version": "0.0.1",
   "dependencies": {
+    "Font-Awesome": "~4.3",
     "angular": "~1.4.3",
     "angular-animate": "~1.4.3",
-    "angular-translate": "~2.7.2",
-    "angular-sanitize": "~1.4.4",
-    "angular-ui-router": "~0.2.12",
-    "angular-ui-utils": "~2.0.0",
-    "angular-ui-tinymce": "~0.0.9",
-    "angular-ui-select": "~0.12.0",
-    "angular-image-crop": "*",
-    "ng-file-upload": "~5.0.9",
-    "angular-socket-io": "0.7.0",
-    "underscore": "~1.7.0",
-    "socket.io-client": "~1.3.6",
-    "pdfjs": "https://github.com/mozilla/pdf.js.git",
-    "animatecss": "https://github.com/daneden/animate.css.git",
-    "Font-Awesome": "~4.3",
-    "font-awesome-animation": "*",
-    "angular-material": "~0.10.0",
-    "angular-timer": "~1.3.3",
-    "satellizer": "~0.11.2",
-    "opentip": "2.4.6",
-    "angular-timeago": "0.1.2",
-    "jspdf": "1.0.x",
-    "ng-messages": "*",
-    "angulartics": "~0.17.2",
     "angular-carousel": "~0.3.12",
-    "angular-cookies": "~1.4.3"
+    "angular-cookies": "~1.4.3",
+    "angular-image-crop": "*",
+    "angular-material": "~0.10.0",
+    "angular-sanitize": "~1.4.4",
+    "angular-socket-io": "0.7.0",
+    "angular-timeago": "0.1.2",
+    "angular-timer": "~1.3.3",
+    "angular-translate": "~2.7.2",
+    "angular-ui-router": "~0.2.12",
+    "angular-ui-select": "~0.12.0",
+    "angular-ui-tinymce": "~0.0.9",
+    "angular-ui-utils": "~2.0.0",
+    "angulartics": "~0.20.0",
+    "angulartics-google-analytics": "~0.1.1",
+    "animatecss": "https://github.com/daneden/animate.css.git",
+    "font-awesome-animation": "*",
+    "jspdf": "1.0.x",
+    "ng-file-upload": "~5.0.9",
+    "ng-messages": "*",
+    "opentip": "2.4.6",
+    "pdfjs": "https://github.com/mozilla/pdf.js.git",
+    "satellizer": "~0.11.2",
+    "socket.io-client": "~1.3.6",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {}
 }
