--- a/client/bower.json
+++ b/client/bower.json
@@ -17,7 +17,7 @@
     "angular-translate": "~2.7.2",
     "angular-ui-router": "~0.2.12",
     "angular-ui-select": "~0.12.0",
-    "angular-ui-tinymce": "~0.0.9",
+    "angular-ui-tinymce": "~0.0.10",
     "angular-ui-utils": "~2.0.0",
     "angulartics": "~0.20.0",
     "angulartics-google-analytics": "~0.1.1",
@@ -30,7 +30,11 @@
     "pdfjs": "https://github.com/mozilla/pdf.js.git",
     "satellizer": "~0.11.2",
     "socket.io-client": "~1.3.6",
+    "tinymce-dist": "4.2.5",
     "underscore": "~1.8.3"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "tinymce-dist": "4.2.5"
+  }
 }
